--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "linked-note-exporter",
+	"name": "Linked Note Exporter",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Export a note with its attachments and linked notes (configurable depth, configurable ignore folders/tags).",
+	"author": "the-c0d3r",
+	"authorUrl": "",
+	"main": "main.js"
 }
