--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "linked-note-exporter",
 	"name": "Linked Note Exporter",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"minAppVersion": "0.15.0",
-	"description": "Export a note with its attachments and linked notes (configurable depth, configurable ignore folders/tags).",
+	"description": "Export note with all its attachments and linked notes.",
 	"author": "the-c0d3r",
 	"authorUrl": "https://github.com/the-c0d3r/",
 	"fundingUrl": {
