--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-linked-note-exporter",
-	"version": "0.1.2",
-	"description": "Export a note with its attachments and linked notes (configurable depth, configurable ignore folders/tags).",
+	"version": "0.1.3",
+	"description": "Export note with all its attachments and linked notes.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
