--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"@wdio/cli": "^9.23.3",
+		"@wdio/local-runner": "^9.23.3",
+		"@wdio/mocha-framework": "^9.23.3",
+		"@wdio/spec-reporter": "^9.23.3",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.25.0",
 		"jest": "^30.2.0",
@@ -24,7 +28,9 @@
 		"ts-jest": "^29.4.6",
 		"ts-node": "^10.9.2",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"wdio-obsidian-reporter": "^2.2.1",
+		"wdio-obsidian-service": "^2.2.1"
 	},
 	"dependencies": {
 		"@types/wicg-file-system-access": "^2023.10.6",
